--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,9 +9,9 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.11"
 pynacl = "^1.5.0"
-discord-py = "^2.3.2"
 python-dotenv = "^1.0.1"
 datetime = "^5.5"
+discord-py = {extras = ["voice"], version = "^2.3.2"}
 
 
 [build-system]
