--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ pynacl = "^1.5.0"
 python-dotenv = "^1.0.1"
 datetime = "^5.5"
 discord-py = {extras = ["voice"], version = "^2.3.2"}
+speechrecognition = "^3.10.4"
+pyaudio = "^0.2.14"
 
 
 [build-system]
