--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ datetime = "^5.5"
 discord-py = {extras = ["voice"], version = "^2.3.2"}
 speechrecognition = "^3.10.4"
 pyaudio = "^0.2.14"
+numpy = "^1.26.4"
+pydub = "^0.25.1"
 
 
 [build-system]
